fix button alignment

--- a/app/styles/_request-beta.scss
+++ b/app/styles/_request-beta.scss
@@ -36,4 +36,10 @@
     .alert {
         display: none;
     }
+
+    button {
+        @media(min-width: 767px) {
+            margin-left: 10px;
+        }
+    }
 }
